@@ -2904,7 +2904,7 @@ if [ "${clm_flg}" = 'Yes' ] && [ "${clm_hfc_or_mth}" = 'Yes' ] && [ "${bnr_flg}"
 	# Block 2 Loop 1: Generate seasonal commands
 	[[ ${dbg_lvl} -ge 1 ]] && date_clm=$(date +"%s")
 	if [ ${clm_md} != 'hfc' ]; then
-	    for ((clm_idx=0;clm_idx<clm_nbr;clm_idx++)); do
+	    for ((clm_idx=1;clm_idx<=clm_nbr;clm_idx++)); do
 		clm_nfo[${clm_idx}]=''
 	    done # !clm_idx
 	fi # !clm_md
@@ -3035,7 +3035,7 @@ if [ "${clm_flg}" = 'Yes' ] && [ "${clm_hfc_or_mth}" = 'Yes' ] && [ "${bnr_flg}"
 	printf "Climatological annual mean...\n"
 	[[ ${dbg_lvl} -ge 1 ]] && date_clm=$(date +"%s")
 	fl_lst="${fl_out[${clm_csn_mam_idx}]} ${fl_out[${clm_csn_jja_idx}]} ${fl_out[${clm_csn_son_idx}]} ${fl_out[${clm_csn_djf_idx}]}"
-	cmd_clm[${clm_nbr}]="${cmd_mpi[${clm_nbr}]} ${cmd_csn2ann} -O -w 92,92,91,90 ${nco_opt} ${gaa_sng} ${fl_lst} ${fl_out[${clm_nbr}]}"
+	cmd_clm[${clm_nbr}]="${cmd_mpi[${clm_nbr}]} ${cmd_csn2ann} ${clm_nfo[${clm_nbr}]} -O -w 92,92,91,90 ${nco_opt} ${gaa_sng} ${fl_lst} ${fl_out[${clm_nbr}]}"
 	#    cmd_clm[17]="${cmd_mpi[17]} ncra --c2b -O -w 92,92,91,90 ${nco_opt} ${gaa_sng} ${fl_out[13]} ${fl_out[14]} ${fl_out[15]} ${fl_out[16]} ${fl_out[17]}"
 	if [ ${dbg_lvl} -ge 1 ]; then
 	    echo ${cmd_clm[${clm_nbr}]}
